fixing textwrap issue in iphone5

--- a/app/styles/v2/Vivanuncios/partials/components/topSearches/_topSearches.scss
+++ b/app/styles/v2/Vivanuncios/partials/components/topSearches/_topSearches.scss
@@ -10,8 +10,8 @@
     
     h1{
 	font: $h1;
-    line-height: 9px;
-    height: 26px;
+    line-height: 18px;
+    height: 39px;
     font-weight: bold;
     border-bottom: 1px solid $seo-bordercolor;
     text-align: center;
